# polomagic

./: .gitignore  Cargo.toml  example.response.json  index.html
.github/workflows/: deploy.yml
docs/: index.html  polomagic-c96c853bc2ead76d_bg.wasm
src/: lib.rs  main.rs
